	* R434: FIXED: compilation warnings for lo48 and lo64 icons
	* R435: Updated NEWS. Updated Slovenian and other translations.
	* R439: Enable print support by default in configure
	* R441: In lilypond export korrect syntax for alternatives in repeats
	* R444: ADDED: Portuguese translation thanks to Denis A. Altoe Falqueto.
	* R445: FIXED: Removed obsolete nscaleedit.h inclusion from a couple of .ui files, which caused problems during compilation on some systems.
	* R446: Updated Slovenian and Italian translation.
	* R447: Updated Documentation (Authors, Copyright, Dependencies)
	* R448: Updated German translation.
	* R450: Bugfix Preview Print: Don't delete preview files too early
	* R451: FIXED: Lilypond instrument name is now exported in UTF8 encoding
	* R452: FIXED: Author -> Composer, Last author -> Arranger, updated translations
	* R453: Updated Spanish translation (part I)
	* R454: FIXED: Removed HTML lyrics parsing. QTextEdit completely messed up NoteEdit's < and > keywords for syllabic singing. 
	* R455: FIXED: Duplicate env string in lilytest.cpp, so the path won't get truncated
	* R456: ADDED: kpdf as preview program
	* R457: CHANGED: Use KProcess:AllOutput on export instead of All
                FIXED: Use Lilyponds PDF output for preview and print
                FIXED: Use QProcess for preview as KProcess::NotifyOnExit is broken on my system
                FIXED: Parent parameters for QProcess and KProcess in preview and export
	* R458: FIXED: Two slots were wrongly assigned to their signals.
	        ADDED: New shortcut for breve.
    * R459: ADDED: StaffGroup for staffs connected with barlines under bracket in LilyPond export code and ChoirStaff only for non-connected staffs under bracket.
	* R460: FIXED: In LilyPond export stanza number moved to beginning of lyrics
	* R461: FIXED: Crash, when you place a note in non-first voice and the first voice doesn't contain the key signature yet.